--- a/index.html
+++ b/index.html
@@ -187,8 +187,10 @@
                 </div>
             </div>
         </section>
-        <!-- card 1 -->
-        <section class="max-w-screen-xl mx-auto grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 mb-32">
+        <!-- card section -->    
+        <section class="max-w-screen-xl mx-auto ">
+           <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 mb-32">
+            <!-- card 1 -->
             <div class="card shadow-xl border-2 border-slate-300">
                 <div class="card-body text-center space-y-8">
                     <div class="flex justify-center items-center p-5">
@@ -235,7 +237,7 @@
                         <input type="radio" name="rating-2" class="mask mask-star-2 bg-bg-color" />
                     </div>
                     <button class="btn" onclick="my_modal_1.showModal()">Details</button>
-                    <dialog id="my_modal_1" class="modal">
+                    <dialog id="my_modal_2" class="modal">
                         <form method="dialog" class="modal-box flex flex-col items-center">
                             <img src="./images/fruit7.png" alt="">
                             <h3 class="font-bold text-lg">Orange</h3>
@@ -251,7 +253,7 @@
                 </div>
             </div>
             <!-- card 3 -->
-            <!-- <div class="card shadow-xl border-2 border-slate-300">
+            <div class="card shadow-xl border-2 border-slate-300">
                 <div class="card-body text-center space-y-8">
                     <div class="flex justify-center items-center p-5">
                         <img src="./images/fruit8.png" alt="">
@@ -266,7 +268,7 @@
                         <input type="radio" name="rating-2" class="mask mask-star-2 bg-bg-color" />
                     </div>
                     <button class="btn" onclick="my_modal_1.showModal()">Details</button>
-                    <dialog id="my_modal_1" class="modal">
+                    <dialog id="my_modal_3" class="modal">
                         <form method="dialog" class="modal-box flex flex-col items-center">
                             <img src="./images/fruit8.png" alt="">
                             <h3 class="font-bold text-lg">Red Dragon</h3>
@@ -280,9 +282,9 @@
                         </form>
                     </dialog>
                 </div>
-            </div> -->
+            </div>
             <!-- card 4 -->
-            <!-- <div class="card shadow-xl border-2 border-slate-300">
+            <div class="card shadow-xl border-2 border-slate-300">
                 <div class="card-body text-center space-y-8">
                     <div class="flex justify-center items-center p-5">
                         <img src="./images/fruit9.png" alt="">
@@ -297,7 +299,7 @@
                         <input type="radio" name="rating-2" class="mask mask-star-2 bg-bg-color" />
                     </div>
                     <button class="btn" onclick="my_modal_1.showModal()">Details</button>
-                    <dialog id="my_modal_1" class="modal">
+                    <dialog id="my_modal_4" class="modal">
                         <form method="dialog" class="modal-box flex flex-col items-center">
                             <img src="./images/fruit9.png" alt="">
                             <h3 class="font-bold text-lg">Banana</h3>
@@ -310,8 +312,14 @@
                         </form>
                     </dialog>
                 </div>
-            </div> -->
+            </div>
+           </div>
+           <div class="flex justify-center items-center mt-10">
+            <button class="btn bg-bg-color font-semibold text-white border-none capitalize">Shop All</button>
+           </div>
         </section>
+        <!-- meet the team section -->
+        <section class="max-w-screen-xl mx-auto mt-20"></section>
 
     </main>
     <footer></footer>
