--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <header class="max-w-screen-xl mx-auto mt-11">
         <!-- nav bar -->
         <div class="navbar bg-bg-color rounded-full mb-14">
-            <div class="navbar-start order-last lg:order-first ml-[100px] lg:ml-0">
+            <div class="navbar-start order-last lg:order-first ml-[100px] md:ml-[550px] lg:ml-0">
                 <div class="dropdown">
                     <label tabindex="0" class="btn btn-ghost text-white lg:hidden">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
@@ -73,11 +73,6 @@
             </div>
 
         </div>
-
-
-
-
-
         </div>
         <!-- banner -->
         <div class="relative">
@@ -177,7 +172,7 @@
         <!-- deal of the day section -->
         <section
             class="max-w-screen-xl mx-auto mt-[220px] flex flex-col lg:flex-row justify-center items-center gap-12 mb-12">
-            <div class="flex-1 space-y-5">
+            <div class="flex-1 space-y-5 text-center lg:text-left p-2">
                 <h1 class="text-4xl font-extrabold">Deal of the day</h1>
                 <p>Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin
                     literature from 45 BC, making it over 2000 years old.</p>
@@ -400,7 +395,7 @@
             <div class="hero min-h-screen" style="background-image: url(./images/banner1.png)">
                 <div class="hero-overlay bg-opacity-60"></div>
                 <div class="hero-content text-center text-neutral-content">
-                    <div class="max-w-md lg:max-w-screen-lg">
+                    <div class="max-w-md md:max-w-screen-lg">
                         <h1 class="mb-5 text-5xl font-bold">Meet the team section</h1>
                         <p class="mb-5 text-[#E7E7E7] max-w-md mx-auto">Contrary to popular belief, is not simply random
                             text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000
@@ -418,7 +413,7 @@
                             </div>
                             <div class="space-y-2">
                                 <img src="./images/member2.png" alt="">
-                                <h3 class="font-extrabold text-2xl">Nipa Khan</h3>
+                                <h3 class="font-extrabold text-2xl">Hasina Hossain</h3>
                                 <p>Fruits Expert</p>
                                 <div class="text-2xl">
                                     <i class="fa-brands fa-facebook text-bg-color p-2"></i>
@@ -459,7 +454,7 @@
             <p class="max-w-2xl mx-auto mb-12 text-[#12121299] text-center">Contrary to popular belief, is not simply
                 random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years
                 old.</p>
-            <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+            <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
                 <div class="space-y-6">
                     <div class="flex items-center gap-10 flex-col lg:flex-row">
                         <div class="w-16 h-12 bg-slate-300 flex items-center justify-center rounded-full">
@@ -472,7 +467,7 @@
                         </div>
                         <div class="flex-1 text-center lg:text-left">
                             <h2 class="text-2xl font-extrabold">Dedicated Team</h2>
-                            <hr class="border border-gray-400 w-20 my-3 ml-[150px] lg:ml-0">
+                            <hr class="border border-gray-400 w-20 my-3 ml-[150px] md:ml-[250px] lg:ml-0">
                             <p class="text-[#12121299]">Professional employees are there for you to pick the most
                                 amazing
                                 and fresh fruits.</p>
@@ -490,7 +485,7 @@
                         </div>
                         <div class="flex-1 text-center lg:text-left">
                             <h2 class="text-2xl font-extrabold">Fresh is Best</h2>
-                            <hr class="border border-gray-400 w-20 my-3 ml-[150px] lg:ml-0">
+                            <hr class="border border-gray-400 w-20 my-3 ml-[150px] md:ml-[250px] lg:ml-0">
                             <p class="text-[#12121299]">Professional employees are there for you to pick the most
                                 amazing
                                 and fresh fruits.</p>
@@ -548,21 +543,21 @@
                         </div>
                         <div class="flex-1 text-center lg:text-left">
                             <h2 class="text-2xl font-extrabold">Gift Certificates</h2>
-                            <hr class="border border-gray-400 w-20 my-3 ml-[150px] lg:ml-0">
+                            <hr class="border border-gray-400 w-20 my-3 ml-[150px] md:ml-[250px] lg:ml-0">
                             <p class="text-[#12121299]">Professional employees are there for you to pick the most
                                 amazing
                                 and fresh fruits.</p>
                         </div>
                     </div>
                 </div>
-                <div class="">
+                <div class="md:flex md:items-center md:justify-center">
                     <img src="./images/whychoose1.png" alt="">
                 </div>
                 <div class="space-y-6">
-                    <div class="flex items-center gap-10 flex-col-reverse md:flex-row">
+                    <div class="flex items-center gap-10 flex-col-reverse lg:flex-row">
                         <div class="text-center lg:text-right flex-1">
                             <h2 class="text-2xl font-extrabold">Integrated Supplier</h2>
-                            <hr class="border border-gray-400 w-20 my-3 ml-[150px] lg:ml-[210px]">
+                            <hr class="border border-gray-400 w-20 my-3 ml-[150px] md:ml-[250px] lg:ml-[210px]">
                             <p class="text-[#12121299]">Professional employees are there for you to pick the most
                                 amazing and fresh fruits.</p>
                         </div>
@@ -610,10 +605,10 @@
                         </div>
 
                     </div>
-                    <div class="flex items-center gap-10 flex-col-reverse md:flex-row">
+                    <div class="flex items-center gap-10 flex-col-reverse lg:flex-row">
                         <div class="text-center lg:text-right flex-1">
                             <h2 class="text-2xl font-extrabold">Sustainable Practice</h2>
-                            <hr class="border border-gray-400 w-20 my-3 ml-[150px] lg:ml-[210px]">
+                            <hr class="border border-gray-400 w-20 my-3 ml-[150px] md:ml-[250px] lg:ml-[210px]">
                             <p class="text-[#12121299]">Professional employees are there for you to pick the most
                                 amazing and fresh fruits.</p>
                         </div>
@@ -630,10 +625,10 @@
                         </div>
 
                     </div>
-                    <div class="flex items-center gap-10 flex-col-reverse md:flex-row">
+                    <div class="flex items-center gap-10 flex-col-reverse lg:flex-row">
                         <div class="text-center lg:text-right flex-1">
                             <h2 class="text-2xl font-extrabold">The Benefits Only</h2>
-                            <hr class="border border-gray-400 w-20 my-3 ml-[150px] lg:ml-[210px]">
+                            <hr class="border border-gray-400 w-20 my-3 ml-[150px] md:ml-[250px] lg:ml-[210px]">
                             <p class="text-[#12121299]">Professional employees are there for you to pick the most
                                 amazing and fresh fruits.</p>
                         </div>
