--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
             </div>
         </section>
         <!-- meet the team section -->
-        <section class="max-w-screen-xl mx-auto mt-20">
+        <section class="max-w-screen-xl mx-auto mt-20 p-2">
             <div class="hero min-h-screen" style="background-image: url(./images/banner1.png)">
                 <div class="hero-overlay bg-opacity-60"></div>
                 <div class="hero-content text-center text-neutral-content">
