--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="hidden lg:flex">
                     <ul class="flex gap-8 pl-12 text-white font-semibold ">
                         <li><a>Home</a></li>
-                        <li><a>About</a></li>
+                        <li><a>About</a></li> 
                         <li><a>Shop</a></li>
                         <li><a>All Fruits</a></li>
                     </ul>
@@ -73,8 +73,7 @@
                 <i class="fa-solid fa-magnifying-glass absolute right-16"></i>
             </div>
 
-        </div>
-        
+        </div> 
         <!-- banner -->
         <div class="relative">
             <div class="carousel w-full">
@@ -551,7 +550,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="md:flex md:items-center md:justify-center">
+                <div class="md:flex md:items-center md:justify-center order-first lg:order-none">
                     <img src="./images/whychoose1.png" alt="">
                 </div>
                 <div class="space-y-6">
