--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
         </section>
         <!-- card section -->
         <section class="max-w-screen-xl mx-auto ">
-            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 mb-32">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-5 mb-32 p-2">
                 <!-- card 1 -->
                 <div class="card shadow-xl border-2 border-slate-300">
                     <div class="card-body text-center space-y-8">
@@ -550,7 +550,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="md:flex md:items-center md:justify-center order-first lg:order-none">
+                <div class="md:flex md:items-center md:justify-center order-first lg:order-none p-2">
                     <img src="./images/whychoose1.png" alt="">
                 </div>
                 <div class="space-y-6">
