--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 </head>
 
 <body class="">
-    <header class="max-w-screen-xl mx-auto mt-11">
+    <header class="max-w-screen-xl mx-auto mt-11 p-2">
         <!-- nav bar -->
         <div class="navbar bg-bg-color rounded-full mb-14">
-            <div class="navbar-start order-last lg:order-first ml-[100px] md:ml-[540px] lg:ml-0">
+            <div class="navbar-start order-last lg:order-first ml-[100px] md:ml-[500px] lg:ml-0">
                 <div class="dropdown">
                     <label tabindex="0" class="btn btn-ghost text-white lg:hidden">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
@@ -239,18 +239,18 @@
                         <h2 class="text-3xl font-extrabold font-eb">12.90$ - 18.85$</h2>
                         <p class="font-poppins text-text-color">Apple</p>
                         <div class="rating rating-lg rating-half">
-                            <input type="radio" name="rating-10" class="rating-hidden" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-1" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-2" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-1"
-                                checked />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-2" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-1" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-2" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-1" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-2" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-1" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10-1" class="rating-hidden" />
+                            <input type="radio" name="rating-10-1" class="bg-bg-color mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10-1" class="bg-bg-color mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10-1" class="bg-bg-color mask mask-star-2 mask-half-1"
+                                />
+                            <input type="radio" name="rating-10-1" class="bg-bg-color mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10-1" class="bg-bg-color mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10-1" class="bg-bg-color mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10-1" class="bg-bg-color mask mask-star-2 mask-half-1"  checked />
+                            <input type="radio" name="rating-10-1" class="bg-bg-color mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10-1" class="bg-bg-color mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10-1" class="bg-bg-color mask mask-star-2 mask-half-2" />
                         </div>
                         <button class="btn text-bg-color" onclick="my_modal_1.showModal()">Details</button>
                         <dialog id="my_modal_1" class="modal">
@@ -278,20 +278,20 @@
                         <h2 class="text-3xl font-extrabold font-eb">12.90$ - 18.85$</h2>
                         <p class="font-poppins text-text-color">Orange</p>
                         <div class="rating rating-lg rating-half">
-                            <input type="radio" name="rating-10" class="rating-hidden" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-1" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-2" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-1"
-                                checked />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-2" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-1" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-2" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-1" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-2" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-1" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10-2" class="rating-hidden" />
+                            <input type="radio" name="rating-10-2" class="bg-bg-color mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10-2" class="bg-bg-color mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10-2" class="bg-bg-color mask mask-star-2 mask-half-1"
+                                 />
+                            <input type="radio" name="rating-10-2" class="bg-bg-color mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10-2" class="bg-bg-color mask mask-star-2 mask-half-1" checked/>
+                            <input type="radio" name="rating-10-2" class="bg-bg-color mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10-2" class="bg-bg-color mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10-2" class="bg-bg-color mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10-2" class="bg-bg-color mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10-2" class="bg-bg-color mask mask-star-2 mask-half-2" />
                         </div>
-                        <button class="btn text-bg-color" onclick="my_modal_1.showModal()">Details</button>
+                        <button class="btn text-bg-color" onclick="my_modal_2.showModal()">Details</button>
                         <dialog id="my_modal_2" class="modal">
                             <form method="dialog" class="modal-box flex flex-col items-center">
                                 <img src="./images/fruit7.png" alt="">
@@ -317,20 +317,20 @@
                         <h2 class="text-3xl font-extrabold font-eb">12.90$ - 18.85$</h2>
                         <p class="font-poppins text-text-color">Red Dragon</p>
                         <div class="rating rating-lg rating-half">
-                            <input type="radio" name="rating-10" class="rating-hidden" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-1" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-2" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-1"
+                            <input type="radio" name="rating-10-3" class="rating-hidden" />
+                            <input type="radio" name="rating-10-3" class="bg-bg-color mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10-3" class="bg-bg-color mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10-3" class="bg-bg-color mask mask-star-2 mask-half-1"
                                 checked />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-2" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-1" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-2" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-1" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-2" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-1" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10-3" class="bg-bg-color mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10-3" class="bg-bg-color mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10-3" class="bg-bg-color mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10-3" class="bg-bg-color mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10-3" class="bg-bg-color mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10-3" class="bg-bg-color mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10-3" class="bg-bg-color mask mask-star-2 mask-half-2" />
                         </div>
-                        <button class="btn text-bg-color" onclick="my_modal_1.showModal()">Details</button>
+                        <button class="btn text-bg-color" onclick="my_modal_3.showModal()">Details</button>
                         <dialog id="my_modal_3" class="modal">
                             <form method="dialog" class="modal-box flex flex-col items-center">
                                 <img src="./images/fruit8.png" alt="">
@@ -356,20 +356,20 @@
                         <h2 class="text-3xl font-extrabold font-eb">12.90$ - 18.85$</h2>
                         <p class="font-poppins text-text-color">Banana</p>
                         <div class="rating rating-lg rating-half">
-                            <input type="radio" name="rating-10" class="rating-hidden" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-1" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-2" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-1"
+                            <input type="radio" name="rating-10-4" class="rating-hidden" />
+                            <input type="radio" name="rating-10-4" class="bg-bg-color mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10-4" class="bg-bg-color mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10-4" class="bg-bg-color mask mask-star-2 mask-half-1"
                                 checked />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-2" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-1" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-2" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-1" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-2" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-1" />
-                            <input type="radio" name="rating-10" class="bg-bg-color mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10-4" class="bg-bg-color mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10-4" class="bg-bg-color mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10-4" class="bg-bg-color mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10-4" class="bg-bg-color mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10-4" class="bg-bg-color mask mask-star-2 mask-half-2" />
+                            <input type="radio" name="rating-10-4" class="bg-bg-color mask mask-star-2 mask-half-1" />
+                            <input type="radio" name="rating-10-4" class="bg-bg-color mask mask-star-2 mask-half-2" />
                         </div>
-                        <button class="btn text-bg-color" onclick="my_modal_1.showModal()">Details</button>
+                        <button class="btn text-bg-color" onclick="my_modal_4.showModal()">Details</button>
                         <dialog id="my_modal_4" class="modal">
                             <form method="dialog" class="modal-box flex flex-col items-center">
                                 <img src="./images/fruit9.png" alt="">
@@ -396,7 +396,7 @@
                 <div class="hero-overlay bg-opacity-60"></div>
                 <div class="hero-content text-center text-neutral-content">
                     <div class="max-w-md md:max-w-screen-lg">
-                        <h1 class="mb-5 text-5xl font-bold">Meet the team section</h1>
+                        <h1 class="mb-5 text-4xl md:text-5xl font-bold">Meet the team section</h1>
                         <p class="mb-5 text-[#E7E7E7] max-w-md mx-auto">Contrary to popular belief, is not simply random
                             text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000
                             years old.</p>
