--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         <div class="hero-overlay bg-opacity-60"></div>
                         <div class="hero-content text-center text-neutral-content">
                             <div class="max-w-md">
-                                <h1 class="mb-5 text-5xl font-bold">Exotic tastes at your doorstep</h1>
+                                <h1 class="mb-5 text-4xl md:text-5xl font-bold">Exotic tastes at your doorstep</h1>
                                 <p class="text-white font-poppins mb-8">We supply highly quality organic products</p>
                                 <button class="btn bg-bg-color text-white capitalize border-none">Shop Now</button>
                             </div>
@@ -171,16 +171,16 @@
     <main>
         <!-- deal of the day section -->
         <section
-            class="max-w-screen-xl mx-auto mt-[220px] flex flex-col lg:flex-row justify-center items-center gap-12 mb-12">
+            class="max-w-screen-xl mx-auto mt-[220px] flex flex-col lg:flex-row justify-center items-center gap-12 mb-12 p-4">
             <div class="flex-1 space-y-5 text-center lg:text-left p-2">
                 <h1 class="text-4xl font-extrabold">Deal of the day</h1>
                 <p>Contrary to popular belief, is not simply random text. It has roots in a piece of classical Latin
                     literature from 45 BC, making it over 2000 years old.</p>
             </div>
-            <div class="flex-1 lg:flex lg:justify-end font-bold">
+            <div class="flex-1 lg:flex lg:justify-end font-bold p-2">
                 <div class="grid grid-flow-col gap-3 text-center auto-cols-max">
                     <div class="flex flex-col">
-                        <span class="countdown font-mono text-5xl">
+                        <span class="countdown font-mono text-4xl">
                             <span style="--value:15;"></span>
                         </span>
                         days
@@ -193,7 +193,7 @@
                         </svg>
                     </div>
                     <div class="flex flex-col">
-                        <span class="countdown font-mono text-5xl">
+                        <span class="countdown font-mono text-4xl">
                             <span style="--value:10;"></span>
                         </span>
                         hours
@@ -206,7 +206,7 @@
                         </svg>
                     </div>
                     <div class="flex flex-col">
-                        <span class="countdown font-mono text-5xl">
+                        <span class="countdown font-mono text-4xl">
                             <span style="--value:24;"></span>
                         </span>
                         min
@@ -219,7 +219,7 @@
                         </svg>
                     </div>
                     <div class="flex flex-col">
-                        <span class="countdown font-mono text-5xl">
+                        <span class="countdown font-mono text-4xl">
                             <span style="--value:5;"></span>
                         </span>
                         sec
@@ -389,7 +389,7 @@
             <div class="flex justify-center items-center mt-10">
                 <button class="btn bg-bg-color font-semibold text-white border-none capitalize">Shop All</button>
             </div>
-        </section>
+        </section> 
         <!-- meet the team section -->
         <section class="max-w-screen-xl mx-auto mt-20 p-2">
             <div class="hero min-h-screen" style="background-image: url(./images/banner1.png)">
@@ -449,7 +449,7 @@
 
         </section>
         <!-- why choose us -->
-        <section class="max-w-screen-xl mx-auto mt-20 mb-20">
+        <section class="max-w-screen-xl mx-auto mt-20 mb-20 p-2">
             <h1 class="text-center text-4xl md:text-5xl font-extrabold mb-6">Why Choose Us</h1>
             <p class="max-w-2xl mx-auto mb-12 text-[#12121299] text-center">Contrary to popular belief, is not simply
                 random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years
@@ -458,7 +458,7 @@
                 <div class="space-y-6">
                     <div class="flex items-center gap-10 flex-col lg:flex-row">
                         <div class="w-16 h-12 bg-slate-300 flex items-center justify-center rounded-full">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24"
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none">
                                 <path
                                     d="M20.52 9.16036C21.2025 8.49188 21.6 7.5787 21.6 6.6C21.6 4.61503 19.9852 3 18 3C17.3441 3 16.6988 3.18028 16.1332 3.52148C15.9442 3.63577 15.8832 3.88144 15.9973 4.07072C16.1113 4.26 16.3574 4.32033 16.5465 4.20666C16.9875 3.94064 17.4899 3.80002 18 3.80002C19.5437 3.80002 20.8 5.05608 20.8 6.6C20.8 7.55077 20.3238 8.42714 19.5246 8.94548C18.8535 9.38573 18.0027 9.51267 17.2258 9.29138C17.0156 9.23081 16.7922 9.35348 16.7312 9.56597C16.6707 9.77845 16.7937 9.99975 17.0062 10.0605C17.3297 10.1531 17.664 10.2 18 10.2C18.629 10.2 19.2369 10.0284 19.7767 9.71855C21.8301 10.4626 23.2 12.4013 23.2 14.6V16.6H19.5525C19.2692 13.9283 17.5884 11.5904 15.1367 10.4802C15.9169 9.68587 16.4 8.59875 16.4 7.40002C16.4 4.97381 14.4262 3 12 3C9.57384 3 7.59998 4.97381 7.59998 7.40002C7.59998 8.59913 8.08336 9.68658 8.86397 10.481C8.03887 10.8559 7.27364 11.3803 6.62461 12.0256C5.38041 13.2734 4.62328 14.8749 4.44356 16.6001H0.800016V14.6001C0.800016 13.2149 1.34105 11.9089 2.32191 10.9239C2.86186 10.3874 3.51923 9.97805 4.22705 9.7208C4.76691 10.0294 5.37305 10.2 6 10.2C6.33595 10.2 6.67031 10.1531 6.99375 10.0605C7.20623 9.9998 7.32928 9.7785 7.26876 9.56602C7.20783 9.35353 6.98437 9.23105 6.77423 9.29142C5.99766 9.51309 5.1473 9.38634 4.47347 8.94455C3.67622 8.42714 3.20002 7.55081 3.20002 6.6C3.20002 5.05608 4.45627 3.80002 6 3.80002C6.51014 3.80002 7.0125 3.94064 7.4535 4.20666C7.64334 4.32033 7.88827 4.25939 8.00273 4.07072C8.11678 3.88148 8.05584 3.63577 7.8668 3.52148C7.30116 3.18028 6.65587 3 6 3C4.01484 3 2.4 4.61503 2.4 6.6C2.4 7.57795 2.7968 8.49042 3.47737 9.1583C2.84302 9.45319 2.25712 9.8603 1.75627 10.3578C0.623812 11.4953 0 13.0018 0 14.6V17C0 17.2209 0.178922 17.4 0.399984 17.4H4.39997V20.6C4.39997 20.8209 4.57889 21 4.79995 21H19.2C19.4211 21 19.5999 20.8209 19.5999 20.6V17.4H23.5999C23.821 17.4 23.9999 17.2209 23.9999 17V14.6C24 12.2349 22.6255 10.131 20.52 9.16036ZM8.4 7.40002C8.4 5.41505 10.0148 3.80002 12 3.80002C13.9852 3.80002 15.6 5.41505 15.6 7.40002C15.6 9.38498 13.9852 11 12 11C10.0148 11 8.4 9.38494 8.4 7.40002ZM18.8 20.2H5.19998V17.4C5.19998 15.5863 5.907 13.8783 7.18983 12.5916C7.86562 11.9194 8.68491 11.398 9.5633 11.0607C10.2615 11.527 11.0992 11.8 12 11.8C12.9022 11.8 13.7415 11.5262 14.4403 11.0585C17.0549 12.0631 18.8 14.5838 18.8 17.4V20.2Z"
@@ -475,7 +475,7 @@
                     </div>
                     <div class="flex items-center gap-10 flex-col lg:flex-row">
                         <div class="w-16 h-12 bg-slate-300 flex items-center justify-center rounded-full">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24"
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none">
                                 <path
                                     d="M18.888 9.976C19.092 9.312 19.2 8.64 19.2 7.976C19.2 5.404 17.228 3.312 14.8 3.312C13.148 3.312 11.632 4.212 10.8 5.62C9.96802 4.212 8.45202 3.312 6.80002 3.312C4.37202 3.312 2.40002 5.404 2.40002 7.976C2.40002 13.84 10.276 18.104 10.612 18.284C10.672 18.316 10.736 18.332 10.8 18.332C10.864 18.332 10.928 18.316 10.988 18.284C11 18.276 11.288 18.124 11.744 17.84C13.344 19.52 15.272 20.568 15.412 20.64C15.472 20.672 15.536 20.688 15.6 20.688C15.664 20.688 15.728 20.672 15.788 20.64C16.024 20.516 21.6 17.492 21.6 13.32C21.6 11.628 20.42 10.228 18.888 9.976ZM10.8 17.472C9.61202 16.792 3.20002 12.884 3.20002 7.976C3.20002 5.844 4.81602 4.112 6.80002 4.112C8.14002 4.112 9.78002 4.908 10.424 6.692C10.48 6.852 10.632 6.956 10.8 6.956C10.968 6.956 11.12 6.852 11.176 6.692C11.82 4.908 13.46 4.112 14.8 4.112C16.784 4.112 18.4 5.844 18.4 7.976C18.4 8.632 18.28 9.296 18.052 9.956C17.056 10.06 16.156 10.612 15.6 11.444C14.98 10.516 13.932 9.932 12.8 9.932C11.036 9.932 9.60002 11.452 9.60002 13.32C9.60002 14.796 10.296 16.124 11.204 17.232C11.04 17.332 10.9 17.416 10.8 17.472ZM15.6 19.828C14.644 19.272 10.4 16.616 10.4 13.32C10.4 11.892 11.476 10.732 12.8 10.732C13.696 10.732 14.792 11.264 15.224 12.46C15.28 12.62 15.432 12.724 15.6 12.724C15.768 12.724 15.92 12.62 15.976 12.46C16.408 11.268 17.504 10.732 18.4 10.732C19.724 10.732 20.8 11.892 20.8 13.32C20.8 16.616 16.556 19.272 15.6 19.828Z"
@@ -493,7 +493,7 @@
                     </div>
                     <div class="flex items-center gap-10 flex-col lg:flex-row">
                         <div class="w-16 h-12 bg-slate-300 flex items-center justify-center rounded-full">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24"
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none">
                                 <g clip-path="url(#clip0_12_5152)">
                                     <path
@@ -562,7 +562,7 @@
                                 amazing and fresh fruits.</p>
                         </div>
                         <div class="w-16 h-12 bg-slate-300 flex items-center justify-center rounded-full">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" viewBox="0 0 24 24"
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                 fill="none">
                                 <g clip-path="url(#clip0_12_5125)">
                                     <path
@@ -703,7 +703,6 @@
             </div>
         </div>
     </footer>
-
 </body>
 
 </html>
