--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     </div>
                 </div>
             </div>
-            <div class="absolute left-[260px] top-[390px] hidden md:hidden lg:block">
+            <div class="absolute left-[260px] -bottom-[80px] hidden md:hidden lg:block">
                 <div class="max-w-screen-md mx-auto flex gap-12 justify-center items-center p-10 bg-white rounded-lg">
                     <div class="text-center space-y-2">
                         <img src="./images/fruit1.png" alt="">
